--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <title>
+        <%= htmlWebpackPlugin.options.title %>
+    </title>
+
+    <body>
+        <div class="test">
+            这是基本页
+        </div>
+    </body>
+
 </html>
