--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -11,7 +11,9 @@
 
     <body>
         <div class="test">
-            blog
+            <button id="check-btn">检测浏览器代理</button>
+            
+            <a href=https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxbdc5610cc59c1631&redirect_uri=https%3A%2F%2Fpassport.yhd.com%2Fwechat%2Fcallback.do&response_type=code&scope=snsapi_userinfo&state=3d6be0a4035d839573b04816624a415e#wechat_redirect“>dian</a>
         </div>
     </body>
 
