--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,16 @@
     </title>
 
     <body>
-        <div class="test">
-            首页
-        </div>
+        <header class="header-box">
+            <nav class="header-nav"></nav>
+            <div class="header-img">图片</div>
+        </header>
+        <section class="container">
+            <div style="width:400px;height:200px;background-color:red">
+
+            </div>
+        </section>
+        <footer class="footer-box"></footer>
     </body>
 
 </html>
