--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,18 @@
     </title>
 
     <body>
-        <header class="header-box">
-            <nav class="header-nav"></nav>
-            <div class="header-img">图片</div>
-        </header>
-        <section class="container">
-            <div style="width:400px;height:200px;background-color:red">
-
-            </div>
-        </section>
-        <footer class="footer-box"></footer>
+        <article class="box">
+            <header class="header-box">
+                <nav class="header-nav"></nav>
+                <div class="header-img">图片</div>
+            </header>
+            <section class="container">
+                <section class="content" style="width:70%;height:700px;background-color:skyblue">
+                </section>
+                <aside class="sidebar" style="width:30%;background:yellowgreen;height:700px"></aside>
+            </section>
+            <footer class="footer-box"></footer>
+        </article>
     </body>
 
 </html>
