--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,33 @@
                 <div class="header-img">图片</div>
             </header>
             <section class="container">
-                <section class="content" style="width:70%;height:700px;background-color:skyblue">
+                <section class="content" style="width:70%;">
+                    <article class="one-bar">
+                        <header>
+                            <div class="bar-date">
+                                <div class="date-day">03</div>
+                                <div class="date-month">April</div>
+                                <div class="date-year">2018</div>
+                            </div>
+                            <div class="bar-title">
+                                <h2>这是标题</h2>
+                            </div>
+                        </header>
+                        <section class="bar-body">
+                            <figure class="bar-box">
+                                <image class="bar-img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1522759222161&di=24c269573b65fd0fd8711822770ac0b7&imgtype=0&src=http%3A%2F%2Fimg1.gtimg.com%2Fcul%2Fpics%2Fhv1%2F167%2F10%2F2017%2F131158142.jpg" />
+                                <figcaption class="bar-desc">
+                                    dsjalkfja;dsfjajdfakjfljadlfjaljfdlkajdflsjalkdfsjlkafsjdklajsdfklajdflkjal;fdjkhflksahdjf,都十分罕见的舒服了
+                                    就好撒打开立方还是大合肥科技阿什顿副科级阿什顿发课件好事会计法哈空间和发卡行开发好看付好款话费卡
+                                </figcaption>
+                            </figure>
+                        </section>
+                        <footer class="bar-footer">
+                            <div class="bar-tag">Javascript</div>
+                            <div class="bar-tag">Webpack</div>
+                            <div class="bar-tag">React</div>
+                        </footer>
+                    </article>
                 </section>
                 <aside class="sidebar" style="width:30%;background:yellowgreen;height:700px"></aside>
             </section>
