--- a/src/index.html
+++ b/src/index.html
@@ -30,10 +30,12 @@
                         </header>
                         <section class="bar-body">
                             <figure class="bar-box">
-                                <image class="bar-img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1522759222161&di=24c269573b65fd0fd8711822770ac0b7&imgtype=0&src=http%3A%2F%2Fimg1.gtimg.com%2Fcul%2Fpics%2Fhv1%2F167%2F10%2F2017%2F131158142.jpg" />
+                                <div class="img-box">
+                                    <img class="bar-img" src="http://a.hiphotos.baidu.com/image/pic/item/d043ad4bd11373f0924d8948af0f4bfbfaed04f2.jpg" alt="美女"
+                                    />
+                                </div>
                                 <figcaption class="bar-desc">
-                                    dsjalkfja;dsfjajdfakjfljadlfjaljfdlkajdflsjalkdfsjlkafsjdklajsdfklajdflkjal;fdjkhflksahdjf,都十分罕见的舒服了
-                                    就好撒打开立方还是大合肥科技阿什顿副科级阿什顿发课件好事会计法哈空间和发卡行开发好看付好款话费卡
+                                    dsjalkfja;dsfjajdfakjfljadlfjaljfdlkajdflsjalkdfsjlkafsjdklajsdfklajdflkjal;fdjkhflksahdjf,都十分罕见的舒服了 就好撒打开立方还是大合肥科技阿什顿副科级阿什顿发课件好事会计法哈空间和发卡行开发好看付好款话费卡
                                 </figcaption>
                             </figure>
                         </section>
@@ -43,8 +45,126 @@
                             <div class="bar-tag">React</div>
                         </footer>
                     </article>
+                    <article class="one-bar">
+                        <header>
+                            <div class="bar-date">
+                                <div class="date-day">03</div>
+                                <div class="date-month">April</div>
+                                <div class="date-year">2018</div>
+                            </div>
+                            <div class="bar-title">
+                                <h2>这是标题</h2>
+                            </div>
+                        </header>
+                        <section class="bar-body">
+                            <figure class="bar-box">
+                                <div class="img-box">
+                                    <img class="bar-img" src="http://a.hiphotos.baidu.com/image/pic/item/d043ad4bd11373f0924d8948af0f4bfbfaed04f2.jpg" alt="美女"
+                                    />
+                                </div>
+                                <figcaption class="bar-desc">
+                                    dsjalkfja;dsfjajdfakjfljadlfjaljfdlkajdflsjalkdfsjlkafsjdklajsdfklajdflkjal;fdjkhflksahdjf,都十分罕见的舒服了 就好撒打开立方还是大合肥科技阿什顿副科级阿什顿发课件好事会计法哈空间和发卡行开发好看付好款话费卡
+                                </figcaption>
+                            </figure>
+                        </section>
+                        <footer class="bar-footer">
+                            <div class="bar-tag">Javascript</div>
+                            <div class="bar-tag">Webpack</div>
+                            <div class="bar-tag">React</div>
+                        </footer>
+                    </article>
+                    <article class="one-bar">
+                        <header>
+                            <div class="bar-date">
+                                <div class="date-day">03</div>
+                                <div class="date-month">April</div>
+                                <div class="date-year">2018</div>
+                            </div>
+                            <div class="bar-title">
+                                <h2>这是标题</h2>
+                            </div>
+                        </header>
+                        <section class="bar-body">
+                            <figure class="bar-box">
+                                <div class="img-box">
+                                    <img class="bar-img" src="http://a.hiphotos.baidu.com/image/pic/item/d043ad4bd11373f0924d8948af0f4bfbfaed04f2.jpg" alt="美女"
+                                    />
+                                </div>
+                                <figcaption class="bar-desc">
+                                    dsjalkfja;dsfjajdfakjfljadlfjaljfdlkajdflsjalkdfsjlkafsjdklajsdfklajdflkjal;fdjkhflksahdjf,都十分罕见的舒服了 就好撒打开立方还是大合肥科技阿什顿副科级阿什顿发课件好事会计法哈空间和发卡行开发好看付好款话费卡
+                                </figcaption>
+                            </figure>
+                        </section>
+                        <footer class="bar-footer">
+                            <div class="bar-tag">Javascript</div>
+                            <div class="bar-tag">Webpack</div>
+                            <div class="bar-tag">React</div>
+                        </footer>
+                    </article>
+                    <article class="one-bar">
+                        <header>
+                            <div class="bar-date">
+                                <div class="date-day">03</div>
+                                <div class="date-month">April</div>
+                                <div class="date-year">2018</div>
+                            </div>
+                            <div class="bar-title">
+                                <h2>这是标题</h2>
+                            </div>
+                        </header>
+                        <section class="bar-body">
+                            <figure class="bar-box">
+                                <div class="img-box">
+                                    <img class="bar-img" src="http://a.hiphotos.baidu.com/image/pic/item/d043ad4bd11373f0924d8948af0f4bfbfaed04f2.jpg" alt="美女"
+                                    />
+                                </div>
+                                <figcaption class="bar-desc">
+                                    dsjalkfja;dsfjajdfakjfljadlfjaljfdlkajdflsjalkdfsjlkafsjdklajsdfklajdflkjal;fdjkhflksahdjf,都十分罕见的舒服了 就好撒打开立方还是大合肥科技阿什顿副科级阿什顿发课件好事会计法哈空间和发卡行开发好看付好款话费卡
+                                </figcaption>
+                            </figure>
+                        </section>
+                        <footer class="bar-footer">
+                            <div class="bar-tag">Javascript</div>
+                            <div class="bar-tag">Webpack</div>
+                            <div class="bar-tag">React</div>
+                        </footer>
+                    </article>
+                    <article class="one-bar">
+                        <header>
+                            <div class="bar-date">
+                                <div class="date-day">03</div>
+                                <div class="date-month">April</div>
+                                <div class="date-year">2018</div>
+                            </div>
+                            <div class="bar-title">
+                                <h2>这是标题</h2>
+                            </div>
+                        </header>
+                        <section class="bar-body">
+                            <figure class="bar-box">
+                                <div class="img-box">
+                                    <img class="bar-img" src="http://a.hiphotos.baidu.com/image/pic/item/d043ad4bd11373f0924d8948af0f4bfbfaed04f2.jpg" alt="美女"
+                                    />
+                                </div>
+                                <figcaption class="bar-desc">
+                                    dsjalkfja;dsfjajdfakjfljadlfjaljfdlkajdflsjalkdfsjlkafsjdklajsdfklajdflkjal;fdjkhflksahdjf,都十分罕见的舒服了 就好撒打开立方还是大合肥科技阿什顿副科级阿什顿发课件好事会计法哈空间和发卡行开发好看付好款话费卡
+                                </figcaption>
+                            </figure>
+                        </section>
+                        <nav class="bar-footer">
+                            <ul class="bar-tag-group">
+                                <div class="bar-tag"><a href="#">Javascript</a></div>
+                                <div class="bar-tag"><a href="#">Webpack</a></div>
+                                <div class="bar-tag"><a href="#">React</a></div>
+                            </ul>
+                        </nav>
+                    </article>
                 </section>
-                <aside class="sidebar" style="width:30%;background:yellowgreen;height:700px"></aside>
+                <aside class="sidebar">
+                    <div class="search-box">
+                        <input type="text">
+                    </div>
+                </aside>
             </section>
             <footer class="footer-box"></footer>
         </article>
