--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
             </header>
             <section class="container">
                 <section class="content" style="width:70%;">
+                    <!--第一篇测试文章-->
                     <article class="one-bar">
                         <header>
                             <div class="bar-date">
@@ -25,110 +26,35 @@
                                 <div class="date-year">2018</div>
                             </div>
                             <div class="bar-title">
-                                <h2>这是标题</h2>
+                                <h2>关于webpack的使用问题</h2>
                             </div>
                         </header>
                         <section class="bar-body">
                             <figure class="bar-box">
+                                <div class="loading-img-box"></div>
                                 <div class="img-box">
-                                    <img class="bar-img" src="http://a.hiphotos.baidu.com/image/pic/item/d043ad4bd11373f0924d8948af0f4bfbfaed04f2.jpg" alt="美女"
-                                    />
+                                    <img class="bar-img" src="http://sparklv.cn/img/test1.jpg" alt="美女" />
                                 </div>
                                 <figcaption class="bar-desc">
                                     dsjalkfja;dsfjajdfakjfljadlfjaljfdlkajdflsjalkdfsjlkafsjdklajsdfklajdflkjal;fdjkhflksahdjf,都十分罕见的舒服了 就好撒打开立方还是大合肥科技阿什顿副科级阿什顿发课件好事会计法哈空间和发卡行开发好看付好款话费卡
                                 </figcaption>
                             </figure>
                         </section>
-                        <footer class="bar-footer">
-                            <div class="bar-tag">Javascript</div>
-                            <div class="bar-tag">Webpack</div>
-                            <div class="bar-tag">React</div>
-                        </footer>
-                    </article>
-                    <article class="one-bar">
-                        <header>
-                            <div class="bar-date">
-                                <div class="date-day">03</div>
-                                <div class="date-month">April</div>
-                                <div class="date-year">2018</div>
-                            </div>
-                            <div class="bar-title">
-                                <h2>这是标题</h2>
-                            </div>
-                        </header>
-                        <section class="bar-body">
-                            <figure class="bar-box">
-                                <div class="img-box">
-                                    <img class="bar-img" src="http://a.hiphotos.baidu.com/image/pic/item/d043ad4bd11373f0924d8948af0f4bfbfaed04f2.jpg" alt="美女"
-                                    />
+                        <nav class="bar-footer">
+                            <ul class="bar-tag-group">
+                                <div class="bar-tag">
+                                    <a class="tag-link" href="#">Javascript</a>
                                 </div>
-                                <figcaption class="bar-desc">
-                                    dsjalkfja;dsfjajdfakjfljadlfjaljfdlkajdflsjalkdfsjlkafsjdklajsdfklajdflkjal;fdjkhflksahdjf,都十分罕见的舒服了 就好撒打开立方还是大合肥科技阿什顿副科级阿什顿发课件好事会计法哈空间和发卡行开发好看付好款话费卡
-                                </figcaption>
-                            </figure>
-                        </section>
-                        <footer class="bar-footer">
-                            <div class="bar-tag">Javascript</div>
-                            <div class="bar-tag">Webpack</div>
-                            <div class="bar-tag">React</div>
-                        </footer>
-                    </article>
-                    <article class="one-bar">
-                        <header>
-                            <div class="bar-date">
-                                <div class="date-day">03</div>
-                                <div class="date-month">April</div>
-                                <div class="date-year">2018</div>
-                            </div>
-                            <div class="bar-title">
-                                <h2>这是标题</h2>
-                            </div>
-                        </header>
-                        <section class="bar-body">
-                            <figure class="bar-box">
-                                <div class="img-box">
-                                    <img class="bar-img" src="http://a.hiphotos.baidu.com/image/pic/item/d043ad4bd11373f0924d8948af0f4bfbfaed04f2.jpg" alt="美女"
-                                    />
+                                <div class="bar-tag">
+                                    <a class="tag-link" href="#">Webpack</a>
                                 </div>
-                                <figcaption class="bar-desc">
-                                    dsjalkfja;dsfjajdfakjfljadlfjaljfdlkajdflsjalkdfsjlkafsjdklajsdfklajdflkjal;fdjkhflksahdjf,都十分罕见的舒服了 就好撒打开立方还是大合肥科技阿什顿副科级阿什顿发课件好事会计法哈空间和发卡行开发好看付好款话费卡
-                                </figcaption>
-                            </figure>
-                        </section>
-                        <footer class="bar-footer">
-                            <div class="bar-tag">Javascript</div>
-                            <div class="bar-tag">Webpack</div>
-                            <div class="bar-tag">React</div>
-                        </footer>
-                    </article>
-                    <article class="one-bar">
-                        <header>
-                            <div class="bar-date">
-                                <div class="date-day">03</div>
-                                <div class="date-month">April</div>
-                                <div class="date-year">2018</div>
-                            </div>
-                            <div class="bar-title">
-                                <h2>这是标题</h2>
-                            </div>
-                        </header>
-                        <section class="bar-body">
-                            <figure class="bar-box">
-                                <div class="img-box">
-                                    <img class="bar-img" src="http://a.hiphotos.baidu.com/image/pic/item/d043ad4bd11373f0924d8948af0f4bfbfaed04f2.jpg" alt="美女"
-                                    />
+                                <div class="bar-tag">
+                                    <a class="tag-link" href="#">React</a>
                                 </div>
-                                <figcaption class="bar-desc">
-                                    dsjalkfja;dsfjajdfakjfljadlfjaljfdlkajdflsjalkdfsjlkafsjdklajsdfklajdflkjal;fdjkhflksahdjf,都十分罕见的舒服了 就好撒打开立方还是大合肥科技阿什顿副科级阿什顿发课件好事会计法哈空间和发卡行开发好看付好款话费卡
-                                </figcaption>
-                            </figure>
-                        </section>
-                        <footer class="bar-footer">
-                            <div class="bar-tag">Javascript</div>
-                            <div class="bar-tag">Webpack</div>
-                            <div class="bar-tag">React</div>
-                        </footer>
+                            </ul>
+                        </nav>
                     </article>
+                    <!--第二篇测试文章-->
                     <article class="one-bar">
                         <header>
                             <div class="bar-date">
@@ -142,8 +68,9 @@
                         </header>
                         <section class="bar-body">
                             <figure class="bar-box">
+                                <div class="loading-img-box"></div>
                                 <div class="img-box">
-                                    <img class="bar-img" src="http://a.hiphotos.baidu.com/image/pic/item/d043ad4bd11373f0924d8948af0f4bfbfaed04f2.jpg" alt="美女"
+                                    <img class="bar-img" src="http://sparklv.cn/img/test.jpg" alt="美女"
                                     />
                                 </div>
                                 <figcaption class="bar-desc">
@@ -153,9 +80,53 @@
                         </section>
                         <nav class="bar-footer">
                             <ul class="bar-tag-group">
-                                <div class="bar-tag"><a href="#">Javascript</a></div>
-                                <div class="bar-tag"><a href="#">Webpack</a></div>
-                                <div class="bar-tag"><a href="#">React</a></div>
+                                <div class="bar-tag">
+                                    <a class="tag-link" href="#">Javascript</a>
+                                </div>
+                                <div class="bar-tag">
+                                    <a class="tag-link" href="#">Webpack</a>
+                                </div>
+                                <div class="bar-tag">
+                                    <a class="tag-link" href="#">React</a>
+                                </div>
+                            </ul>
+                        </nav>
+                    </article>
+                    <!--第三篇测试文章-->
+                    <article class="one-bar">
+                        <header>
+                            <div class="bar-date">
+                                <div class="date-day">03</div>
+                                <div class="date-month">April</div>
+                                <div class="date-year">2018</div>
+                            </div>
+                            <div class="bar-title">
+                                <h2>这是标题</h2>
+                            </div>
+                        </header>
+                        <section class="bar-body">
+                            <figure class="bar-box">
+                                <div class="loading-img-box"></div>
+                                <div class="img-box">
+                                    <img class="bar-img" src="http://sparklv.cn/img/test.jpg" alt="美女"
+                                    />
+                                </div>
+                                <figcaption class="bar-desc">
+                                    dsjalkfja;dsfjajdfakjfljadlfjaljfdlkajdflsjalkdfsjlkafsjdklajsdfklajdflkjal;fdjkhflksahdjf,都十分罕见的舒服了 就好撒打开立方还是大合肥科技阿什顿副科级阿什顿发课件好事会计法哈空间和发卡行开发好看付好款话费卡
+                                </figcaption>
+                            </figure>
+                        </section>
+                        <nav class="bar-footer">
+                            <ul class="bar-tag-group">
+                                <div class="bar-tag">
+                                    <a class="tag-link" href="#">Javascript</a>
+                                </div>
+                                <div class="bar-tag">
+                                    <a class="tag-link" href="#">Webpack</a>
+                                </div>
+                                <div class="bar-tag">
+                                    <a class="tag-link" href="#">React</a>
+                                </div>
                             </ul>
                         </nav>
                     </article>
