--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,21 @@
             <header class="header-box">
                 <nav class="header-nav"></nav>
                 <div class="header-img-box">
+                    <div class="img-title">
+                        <span class="first-line">About Coding</span>
+                        <br>
+                        <span class="second-line">Code is my job and hobby!</span>
+                    </div>
+                    <div class="img-title">
+                        <span class="first-line">About Reading</span>
+                        <br>
+                        <span class="second-line">Reading is my precious!</span>
+                    </div>
+                    <div class="img-title">
+                        <span class="first-line">About Stock</span>
+                        <br>
+                        <span class="second-line">Stock give me experience!</span>
+                    </div>
                     <img class="header-img head-img-show" src="http://sparklv.cn/img/head-code.jpg" />
                     <img class="header-img" src="http://sparklv.cn/img/head-book.jpg" />
                     <img class="header-img" src="http://sparklv.cn/img/head-stock.jpg" />
