--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,44 @@
     <body>
         <article class="box">
             <header class="header-box">
-                <nav class="header-nav"></nav>
+                <div class="header-head">
+                    <div class="head-logo">
+                        Spark's Blog
+                    </div>
+                    <nav class="head-nav">
+                        <ul>
+                            <li class="head-nav-item">
+                                <span>Tech</span>
+                                <ul class="nav-list">
+                                    <li class="nav-list-item">HTML</li>
+                                    <li class="nav-list-item">CSS</li>
+                                    <li class="nav-list-item">Javascript</li>
+                                    <li class="nav-list-item">React</li>
+                                    <li class="nav-list-item">Webpack</li>
+                                </ul>
+                            </li>
+                            <li class="head-nav-item">
+                                <span>Book</span>
+                                <ul class="nav-list">
+                                    <li class="nav-list-item">history</li>
+                                    <li class="nav-list-item">culture</li>
+                                </ul>
+                            </li>
+                            <li class="head-nav-item">
+                                <span>Stock</span>
+                                <ul class="nav-list">
+                                    <li class="nav-list-item">Stock</li>
+                                </ul>
+                            </li>
+                            <li class="head-nav-item">
+                                <span>Essay</span>
+                                <ul class="nav-list">
+                                    <li class="nav-list-item">spirit</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
                 <div class="header-img-box">
                     <div class="img-title">
                         <span class="first-line">About Coding</span>
