--- a/src/index.html
+++ b/src/index.html
@@ -80,26 +80,18 @@
                 <section class="content" style="width:70%;">
                     <!--第一篇测试文章-->
                     <article class="one-bar">
+                        <section class="bar-body">
+                            <div class="loading-img-box"></div>
+                            <div class="img-box"></div>
+                        </section>
                         <header>
-                            <div class="bar-date">
-                                <div class="date-day">03</div>
-                                <div class="date-month">April</div>
-                                <div class="date-year">2018</div>
-                            </div>
                             <div class="bar-title">
                                 <h2>关于webpack的使用问题</h2>
                             </div>
+                            <div class="bar-desc">
+                                dsjalkfja;dsfjajdfakjfljadlfjaljfdlkajdflsjalkdfsjlkafsjdklajsdfklajdflkjal;fdjkhflksahdjf,都十分罕见的舒服了 就好撒打开立方还是大合肥科技阿什顿副科级阿什顿发课件好事会计法哈空间和发卡行开发好看付好款话费卡
+                            </div>
                         </header>
-                        <section class="bar-body">
-                            <figure class="bar-box">
-                                <div class="loading-img-box"></div>
-                                <div class="img-box">
-                                </div>
-                                <figcaption class="bar-desc">
-                                    dsjalkfja;dsfjajdfakjfljadlfjaljfdlkajdflsjalkdfsjlkafsjdklajsdfklajdflkjal;fdjkhflksahdjf,都十分罕见的舒服了 就好撒打开立方还是大合肥科技阿什顿副科级阿什顿发课件好事会计法哈空间和发卡行开发好看付好款话费卡
-                                </figcaption>
-                            </figure>
-                        </section>
                         <nav class="bar-footer">
                             <ul class="bar-tag-group">
                                 <div class="bar-tag">
