--- a/src/index.html
+++ b/src/index.html
@@ -77,18 +77,18 @@
                 </div>
             </header>
             <section class="container">
-                <section class="content" style="width:70%;">
+                <section class="content">
                     <!--第一篇测试文章-->
                     <article class="one-bar">
                         <section class="bar-body">
-                            <div class="bar-box">
+                            <div>
                                 <div class="loading-img-box"></div>
                                 <div class="img-box">
                                 </div>
                             </div>
                         </section>
                         <header class="bar-head">
-                            <div class="bar-title">关于JS的一些思考</div>
+                            <div class="bar-title">new关于JS的一些思考</div>
                             <div class="bar-desc">房间安静地方；垃圾的看法就爱了解放垃圾的弗兰克圣诞节福利卡积分；老大发动机奥斯卡发链接阿卡丽；发</div>
                         </header>
                         <nav class="bar-footer">
