--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_470643_cpudkhihfzwd0a4i.css">
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
@@ -605,6 +606,9 @@
                     </article>
                 </section>
                 <aside class="sidebar">
+                    <div class="side-head">
+                        <i class="iconfont icon-clear side-head-close"></i>
+                    </div>
                     <div class="search-box">
                         <input type="text">
                     </div>
@@ -729,6 +733,9 @@
             <img class="loading-more" src="http://sparklv.cn/img/icon/more-essay.svg" alt="loading-more">
             <footer class="footer-box"></footer>
         </article>
+        <div class="more-menu">
+            <i class="iconfont icon-more"></i>
+        </div>
         <div class="to-top">
             <div class="to-top-arrow"></div>
         </div>
