--- a/src/index.html
+++ b/src/index.html
@@ -82,11 +82,11 @@
                     <!--第一篇测试文章-->
                     <article class="one-bar">
                         <section class="bar-body">
-                            <div>
+                            <a href="/static/html/art1.html">
                                 <div class="loading-img-box"></div>
                                 <div class="img-box">
                                 </div>
-                            </div>
+                            </a>
                         </section>
                         <header class="bar-head">
                             <div class="bar-title">new关于JS的一些思考</div>
